--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,49 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Murcphy</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <!--<h3>Ionic Menu Starter</h3>
 
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+    
   </p>
+<button ion-button secondary menuToggle>Toggle Menu</button>-->
+  <ion-item>
+    <ion-label color="primary" floating>Input</ion-label>
+    <ion-textarea [(ngModel)]='InputText' (ionChange)='Inittranslate()'></ion-textarea>
+  </ion-item>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+
+  <ion-item>
+    <ion-label>Passthrough Cipher</ion-label>
+    <ion-select [(ngModel)]="PassThorughChiper" multiple="false" interface="action-sheet">
+      <ion-option value=0>NO CHIPER</ion-option>
+      <ion-option value=1>CEASER</ion-option>
+      <ion-option value=2>QWERTY</ion-option>
+
+    </ion-select>
+  </ion-item>
+
+
+
+  <ion-item>
+    <ion-label>Show Intermeidiate</ion-label>
+    <ion-toggle [(ngModel)]="ShowIntermediate"></ion-toggle>
+  </ion-item>
+
+  <ion-item *ngIf="ShowIntermediate">
+    <ion-label color="primary" floating>Intermediate</ion-label>
+    <ion-textarea [(ngModel)]='IntermediateText'></ion-textarea>
+  </ion-item>
+
+  <ion-item>
+    <ion-label color="primary" floating>Output</ion-label>
+    <ion-textarea [(ngModel)]='OutputText'></ion-textarea>
+  </ion-item>
+
 </ion-content>
